feat: add document artifact workflow